{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 22,
  "lineage": "61cb2ade-e683-b297-f9b2-680c711f65d8",
  "resources": [
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006380c53780cd731",
            "domain": "vpc",
            "id": "eipalloc-006380c53780cd731",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-60-0.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.60.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.igw",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:internet-gateway/igw-03b328c56b49b3811",
            "id": "igw-03b328c56b49b3811",
            "owner_id": "537064189997",
            "tags": {
              "Name": "myVPC-ind-igw"
            },
            "tags_all": {
              "Name": "myVPC-ind-igw"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006380c53780cd731",
            "connectivity_type": "public",
            "id": "nat-0b13ad400d6c75d7d",
            "network_interface_id": "eni-098e38fd558fd6dc0",
            "private_ip": "10.1.6.69",
            "public_ip": "3.111.60.0",
            "subnet_id": "subnet-0047d5031e409ad6a",
            "tags": {
              "Name": "myVPC-ind-nat"
            },
            "tags_all": {
              "Name": "myVPC-ind-nat"
            }
          },
          "dependencies": [
            "module.vpc-module.aws_eip.nat_eip",
            "module.vpc-module.aws_internet_gateway.igw",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ef056e1bc36ae73e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b13ad400d6c75d7d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef056e1bc36ae73e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_eip.nat_eip",
            "module.vpc-module.aws_internet_gateway.igw",
            "module.vpc-module.aws_nat_gateway.nat",
            "module.vpc-module.aws_route_table.private",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b328c56b49b3811",
            "id": "r-rtb-0bc36c972a14cc17e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc36c972a14cc17e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.igw",
            "module.vpc-module.aws_route_table.public",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:route-table/rtb-0ef056e1bc36ae73e",
            "id": "rtb-0ef056e1bc36ae73e",
            "owner_id": "537064189997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myVPC-ind-private-route-table"
            },
            "tags_all": {
              "Name": "myVPC-ind-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:route-table/rtb-0bc36c972a14cc17e",
            "id": "rtb-0bc36c972a14cc17e",
            "owner_id": "537064189997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myVPC-ind-public-route-table"
            },
            "tags_all": {
              "Name": "myVPC-ind-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fff6718c040d0627",
            "route_table_id": "rtb-0ef056e1bc36ae73e",
            "subnet_id": "subnet-02b617d0879df24f5"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.private",
            "module.vpc-module.aws_subnet.private_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee90ae11a3c628a0",
            "route_table_id": "rtb-0ef056e1bc36ae73e",
            "subnet_id": "subnet-09f2a3375078aead0"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.private",
            "module.vpc-module.aws_subnet.private_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b45edec26f6271b0",
            "route_table_id": "rtb-0ef056e1bc36ae73e",
            "subnet_id": "subnet-0ea5e1fae9e9d102b"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.private",
            "module.vpc-module.aws_subnet.private_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd361aebef16700a",
            "route_table_id": "rtb-0bc36c972a14cc17e",
            "subnet_id": "subnet-0047d5031e409ad6a"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.public",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff4da773b044a57",
            "route_table_id": "rtb-0bc36c972a14cc17e",
            "subnet_id": "subnet-041f3a34a5b0a2755"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.public",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06746682869217fa7",
            "route_table_id": "rtb-0bc36c972a14cc17e",
            "subnet_id": "subnet-01c8f5d52b1e24e44"
          },
          "dependencies": [
            "module.vpc-module.aws_route_table.public",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:security-group/sg-03daa96c34a1dd8ed",
            "description": "Default SG to alllow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-03daa96c34a1dd8ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "myVPC-ind-default-sg",
            "name_prefix": "",
            "owner_id": "537064189997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myVPC-ind-default-sg"
            },
            "tags_all": {
              "Name": "myVPC-ind-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-02b617d0879df24f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b617d0879df24f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1a-private-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1a-private-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-09f2a3375078aead0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f2a3375078aead0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1b-private-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1b-private-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-0ea5e1fae9e9d102b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea5e1fae9e9d102b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1c-private-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1c-private-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-0047d5031e409ad6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0047d5031e409ad6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1a-public-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1a-public-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-041f3a34a5b0a2755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f3a34a5b0a2755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1b-public-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1b-public-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:subnet/subnet-01c8f5d52b1e24e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c8f5d52b1e24e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1c-public-subnet-test"
            },
            "tags_all": {
              "Name": "ap-south-1c-public-subnet-test"
            },
            "vpc_id": "vpc-0d42cbf9abbb71bb8"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:537064189997:vpc/vpc-0d42cbf9abbb71bb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bd4b74691d13c7a8",
            "default_route_table_id": "rtb-09ca588d63d9e4159",
            "default_security_group_id": "sg-0886e60a3709fa4f3",
            "dhcp_options_id": "dopt-0e50a49227e7bb29d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d42cbf9abbb71bb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ca588d63d9e4159",
            "owner_id": "537064189997",
            "tags": {
              "Name": "test-myVPC-ind"
            },
            "tags_all": {
              "Name": "test-myVPC-ind"
            }
          }
        }
      ]
    }
  ]
}